<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, SAS_revActivity!</string>
    
    <string name="app_name">SAS_revB</string>
	<string name="plotAct_text">Plot View</string>
    <string name="testSMSAct_text">Send Test Text Message</string>   
    <string name="contactAct_text">Add or Edit an alert contact</string>
    <string name="settingsAct_text">SAS Settings</string>
    <string name="opModeAct_text">Operational Mode</string>
	    
	<string name="viewWave_btText">View audio wave plot</string>
    <string name="viewFFT_btText">View FFT plot</string>
    <string name="setThresh_btText">Set the threshold value</string>
    <string name="setSMS_btText">SMS settings</string>
    <string name="sendSMS_btText">Send a test text message</string>
    <string name="Sets_btText">View Settings</string>
    <string name="opMode_btText">Enter Operational Mode</string>
        
    <string name="include_date_cb">Include the current date</string>
	<string name="include_time_cb">Include the current time</string>
	<string name="fake_data_text">False test data to send</string>
	
	<string name="edit">Edit</string>
    <string name="addnew">Add New</string>
    <string name="delete">Delete</string>
    <string name="view">View</string>
    
    <string name="exitOp_btText">Exit Operational Mode</string>
    
        
</resources>