<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello" />
    
    <Button
        android:id="@+id/btnSettings"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Sets_btText" />
    
    <Button
        android:id="@+id/wave_plot"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/viewWave_btText" />
    
    <Button
        android:id="@+id/FFT_plot"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/viewFFT_btText" />
    
	<Button
        android:id="@+id/setSMS"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/setSMS_btText" />
	
	<Button
        android:id="@+id/sendTestSMS"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/sendSMS_btText" />
	
	<Button
        android:id="@+id/btOpMode"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/opMode_btText" />
       
</LinearLayout>